<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_floor_3">

    <include
        android:id="@+id/toolbar_bg"
        layout="@layout/include_toolbar_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name_lowercase"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_bg"
        app:layout_constraintEnd_toEndOf="@id/toolbar_bg"
        app:layout_constraintStart_toStartOf="@id/toolbar_bg"
        app:layout_constraintTop_toTopOf="@id/toolbar_bg" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ripple_ui_icon"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_bg"
        app:layout_constraintEnd_toEndOf="@id/toolbar_bg"
        app:layout_constraintTop_toTopOf="@id/toolbar_bg"
        app:srcCompat="@drawable/ic_menu" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_ui_icon"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_bg"
        app:layout_constraintEnd_toStartOf="@id/menu_button"
        app:layout_constraintTop_toTopOf="@id/toolbar_bg"
        app:srcCompat="@drawable/ic_account" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_search_field"
        android:hint="@string/search"
        app:layout_constraintBottom_toTopOf="@id/product_list"
        app:layout_constraintEnd_toStartOf="@id/byn_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_bg" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/byn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="BYN"
        app:layout_constraintBottom_toBottomOf="@id/search_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_field"
        app:layout_constraintTop_toTopOf="@id/search_field" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_field" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@id/product_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_list" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cant_load_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cant_load_message"
        android:textColor="@color/secondary_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/product_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_list"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>