<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_bg"
        layout="@layout/include_toolbar_background" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_ui_icon"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_bg"
        app:layout_constraintStart_toStartOf="@id/toolbar_bg"
        app:layout_constraintTop_toTopOf="@id/toolbar_bg"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/primary_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/account"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_bg"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/toolbar_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/user_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.6" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/choose_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/user_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_image"
                app:layout_constraintTop_toTopOf="@id/user_image"
                app:srcCompat="@drawable/ic_baseline_image_24"
                app:tint="@color/primary_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/name"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="@id/name_field"
                app:layout_constraintTop_toBottomOf="@id/user_image" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_search_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/email"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="@id/email_field"
                app:layout_constraintTop_toBottomOf="@id/name_field" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_search_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>